[gd_scene load_steps=8 format=2]

[ext_resource path="res://Pause.gd" type="Script" id=1]
[ext_resource path="res://images/Title screen/title_screen_background.png" type="Texture" id=2]
[ext_resource path="res://images/Title screen/name.png" type="Texture" id=3]
[ext_resource path="res://images/Title screen/newgame.png" type="Texture" id=4]
[ext_resource path="res://images/Title screen/selection.png" type="Texture" id=5]
[ext_resource path="res://images/Title screen/continue.png" type="Texture" id=6]
[ext_resource path="res://images/Title screen/exit.png" type="Texture" id=7]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
change_level = "res://Scenes/Scene.tscn"
target_spawn_group = "player"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.79492, 0 )
scale = Vector2( 0.510372, 0.499366 )
texture = ExtResource( 2 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 770.0
margin_top = 224.0
margin_right = 2158.0
margin_bottom = 516.0
rect_scale = Vector2( 0.5, 0.6 )
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 1388.0
margin_bottom = 292.0
texture = ExtResource( 3 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 884.0
margin_top = 364.0
margin_right = 1317.0
margin_bottom = 880.0
rect_scale = Vector2( 0.5, 0.5 )
alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer2"]
margin_top = 79.0
margin_right = 433.0
margin_bottom = 205.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 5 )

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer2"]
margin_top = 209.0
margin_right = 433.0
margin_bottom = 323.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer2"]
margin_top = 327.0
margin_right = 433.0
margin_bottom = 436.0
texture_normal = ExtResource( 7 )
texture_focused = ExtResource( 5 )

[connection signal="pressed" from="VBoxContainer2/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="VBoxContainer2/TextureButton3" to="." method="_on_TextureButton3_pressed"]
